# sphinx-cache

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  README.rst  changelog.html  genindex.html  index.html  noxfile.py  objects.inv  pyproject.toml  searchindex.js  support.html
.github/workflows/: ci.yaml  docs.yaml  release.yaml
_sources/: index.rst.txt
_static/: sphinx_immaterial_theme.25a2151c19adfdbcf.min.css  sphinx_immaterial_theme.942c646e5c4e8b1cc.min.css  sphinx_immaterial_theme.ea7c5166e0669fcba.min.css
docs/: changelog.rst  conf.py  doc-requirements.txt  index.rst  support.rst  test.rst
sphinx_cache/: __init__.py  __main__.py  cli_script.py  logging.py  setup.py  utils.py
tests/: conftest.py  test_done.py  test_warn.py
tests/doc_test/doc_basic/: conf.py  index.rst
