[tool.poetry]
name = "sphinx-cache"

# !! Don't miss updates in version.py, and changelog.rst!!!
version = "0.0.1"

description = "A flexible CLI tool to store and restore Sphinx .doctree cache."
authors = ["team useblocks <info@useblocks.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/useblocks/sphinx-cache"
documentation = "https://useblocks.github.io/sphinx-cache/"
classifiers=[
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Documentation',
        'Topic :: Utilities',
        'Topic :: Software Development :: Build Tools',
    ]

packages = [
    {include = "sphinx_cache"}
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
pathlib = ">=1.0.1"
click = ">=8.1.3"
sphinx = ">=5.0"
colorama = ">=0.4.6"
click-option-group = ">=0.5.5"


[tool.poetry.scripts]
sphinx_cache = 'sphinx_cache.__main__:cli'

[tool.poetry.dev-dependencies]
pre-commit = "^2"
# test dependencies
pytest = "^7"
pytest-xdist="*"  # parallelisation
myst-parser="^0.18.0"

# type checking
mypy = "^0.991"
types-requests = "^2.27.25"
types-setuptools = "^65.6.0.2"
docutils-stubs = "^0.0.22"

# formatting dependencies
black = "^22.3"
isort = "^5.7.0"

# pyparsing 3.0.5 does not work with current "packaging" lib
pyparsing = "^3.0.9"  # 3.0.5 error: https://github.com/pyparsing/pyparsing/issues/329

[tool.pytest.ini_options]
console_output_style = "count"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
implicit_reexport = true
files = "sphinx_cache"
ignore_missing_imports = true
namespace_packages = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    'sphinx_cache.cli_script',
    'sphinx_cache.logging',
    'sphinx_cache.utils',
    'sphinx_cache.version'
]
ignore_errors = true

[build-system]
requires = ["setuptools", "poetry_core>=1.0.8"]  # setuptools
build-backend = "poetry.core.masonry.api"
